--- a/AvatarGen/AppearanceGen/confs/examples_small/example.conf
+++ b/AvatarGen/AppearanceGen/confs/examples_small/example.conf
@@ -44,9 +44,9 @@ train {
 }
 
 clip {
-    prompt = a 3D rendering of a {TOREPLACE} in unreal engine
-    face_prompt = a 3D rendering of the face of {TOREPLACE} in unreal engine
-    back_prompt = a 3D rendering of the back of {TOREPLACE} in unreal engine
+    prompt = a 3D rendering of a Iron Man in unreal engine
+    face_prompt = a 3D rendering of the face of Iron Man in unreal engine
+    back_prompt = a 3D rendering of the back of Iron Man in unreal engine
 }
 
 model {
@@ -63,15 +63,15 @@ model {
     }
 
     sdf_network {
-        d_out = 129
-        d_in = 3
-        d_hidden = 128
-        n_layers = 3
-        skip_in = [3]
-        multires = 6
-        bias = 0.5
-        scale = 1.0
-        geometric_init = True
+        d_out = 129,
+        d_in = 3,
+        d_hidden = 128,
+        n_layers = 3,
+        skip_in = [3],
+        multires = 6,
+        bias = 0.5,
+        scale = 1.0,
+        geometric_init = True,
         weight_norm = True
     }
 
@@ -80,25 +80,24 @@ model {
     }
 
     rendering_network {
-        d_feature = 128
-        mode = no_view_dir
-        d_in = 6
-        d_out = 3
-        d_hidden = 128
-        n_layers = 1
-        weight_norm = True
-        multires_view = 0
-        squeeze_out = True
+        d_feature = 128,
+        mode = no_view_dir,
+        d_in = 6,
+        d_out = 3,
+        d_hidden = 128,
+        n_layers = 1,
+        weight_norm = True,
+        multires_view = 0,
+        squeeze_out = True,
         extra_color = True
     }
 
     neus_renderer {
-        n_samples = 32
-        n_importance = 32
-        n_outside = 0
-        up_sample_steps = 4     # 1 for simple coarse-to-fine sampling
-        perturb = 1.0
+        n_samples = 32,
+        n_importance = 32,
+        n_outside = 0,
+        up_sample_steps = 4,
+        perturb = 1.0,
         extra_color = True
     }
 }
-
